--- a/pacientes/pacientes.html
+++ b/pacientes/pacientes.html
@@ -32,8 +32,8 @@
 						<li><a href="../index.html"><img src="../assets/icon-home.png" class="img-icon" ></a></li>
 						<li><a href="../formulario.html"><img src="../assets/icon_forms.png" class="img-icon"></a></li>
 						<li><a class="active" href="pacientes.html"><img src="../assets/icon_paciente.png" class="img-icon"></a></li>
-						<li><a href="#!"><img src="../assets/icon_ajuda.png" class="img-icon"></a></li>
-						<li><a href="#!"><img src="../assets/icon_sobre.png" class="img-icon"></a></li>
+						<li><a href="../ajuda.html"><img src="../assets/icon_ajuda.png" class="img-icon"></a></li>
+					<li><a href="../sobre.html"><img src="../assets/icon_sobre.png" class="img-icon"></a></li>
 					</ul>
 				</div>
 			</nav>
@@ -80,24 +80,20 @@
 	  	<div class="row">
 	  		<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 10%; background-color: #5ABBE5;">
 	  			<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
-	  			top: 40%;
-	  			transform: translateY(-40%); font-size: 50px; color:white;">Antônio Carlos da Silva</h6>
+	  			font-size: 50px; color:white;">Antônio Carlos da Silva</h6>
 	  		</div>
 	  	</div>
 
 	  <div class="row">
 	  		<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #50A5C8;">
-	  			<a href="pacientes_visualizar.html">	<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
-	  			top: 40%;
-	  			transform: translateY(-40%); font-size: 50px; color:white;">Dávila Fernandes</h6>
+	  			<a href="pacientes_visualizar.html">	<h6 style="display: inline-block; margin-left: 5%; padding: 0px; font-size: 50px; color:white;">Dávila Fernandes</h6>
 	  	</a>	</div>
 	  	</div>
 
 	  	<div class="row">
 	  		<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 5%; background-color: #4A96B5;">
 	  			<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
-	  			top: 40%;
-	  			transform: translateY(-40%);font-size: 50px; color:white;">Marina Barbosa dos Santos</h6>
+	  			font-size: 50px; color:white;">Marina Barbosa dos Santos</h6>
 	  		</div>
 	  	</div>
 	  </div>
