--- a/pacientes/pacientes_formulario.html
+++ b/pacientes/pacientes_formulario.html
@@ -31,41 +31,42 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col s4 ">
-				<img class="imagens responsive-img left-align" src="../assets/paciente_feminina.png">
-			</div>
-			<div class="col s2 ">
-				<nav id="barrinha3" style="padding: 1.5% 4% 200% !important; border-radius:20px;"></nav>
-			</div>
-			<div class="col s6 ">
-				<h8 style="font-size: 44px;">Davila Fernandes</h8>
-				<h8 style="font-size: 44px;">22/06/1990</h8>
-			</div>
-		</div>
-	</div>
+	      <div class="col s4 ">
+			<img class="imagens responsive-img left-align" src="../assets/paciente_feminina.png">
+			      </div>
+	      <div class="col s4 ">
+	      	<nav id="barrinha">
+			</nav>
+	      </div>
+	      <div class="col s4 ">
+	      	<h7 style="font-size: 40px;">Dávila Fernandes</h7>
+	      	<h7 style="font-size: 36px;">22/06/1990</h7>
+	      </div>
+	  </div>
+	
 
-	<div class="row">
+	<div class="row" style="margin-top: 10%;">
 		<div class="col s12">
 			<div class="row linha" id="botoes">
 				<div class="col s6 center-align">
-					<button id="meubotao3" class="button-verde" >Dados</button>
+					<button id="meubotao3" class="button-cinza" >Dados</button>
 				</div>
 				<div class="col s6 center-align">
-					<button id="meubotao4" class="button-cinza">Formulários</button>
+					<button id="meubotao4" class="button-verde">Formulários</button>
 				</div>
 			</div>
 		</div>
 	</div>
 
 <!--inicio categorias-->
-	  	<a href="../src formulario visualizar/forms_respostas_pelvica.html"><div class="row">
+	  	<div class="row">
 	  		<div class="col s12 categorias" style="display: inline-block; border-radius: 20px; margin-top: 10%; background-color: #5ABBE5;">
-	  			<h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
-	  			top: 40%;
-	  			transform: translateY(-40%); font-size: 50px; color:white;">Questionário de Impacto no Assoalho Pélvico</h6>
-	  			<img src="../assets/icon_prosseguir.png">
-	  		</div>
-	  	</div></a>
+	 <a href="../src formulario visualizar/forms_respostas_pelvica.html"> 			
+	 <h6 style="display: inline-block; margin-left: 5%; padding: 0px; position:relative !important;
+	  			font-size: 50px; color:white;">Questionário de Impacto no Assoalho Pélvico</h6>
+	  			
+	  </a>		</div>
+	  	</div></div>
 	  <!--fim categorias-->
 	  <!--inicio do menu inferior-->
 	  <div class="footer-fixed">
@@ -76,8 +77,8 @@
 	  					<li><a href="../index.html"><img src="../assets/icon-home.png" class="img-icon" ></a></li>
 	  					<li><a href="../formulario.html"><img src="../assets/icon_forms.png" class="img-icon"></a></li>
 	  					<li><a class="active" href="pacientes.html"><img src="../assets/icon_paciente.png" class="img-icon"></a></li>
-	  					<li><a href="#!"><img src="../assets/icon_ajuda.png" class="img-icon"></a></li>
-	  					<li><a href="#!"><img src="../assets/icon_sobre.png" class="img-icon"></a></li>
+	  					<li><a href="../ajuda.html"><img src="../assets/icon_ajuda.png" class="img-icon"></a></li>
+					<li><a href="../sobre.html"><img src="../assets/icon_sobre.png" class="img-icon"></a></li>
 	  				</ul>
 	  			</div>
 	  		</nav>
