--- a/pacientes/pacientes_visualizar.html
+++ b/pacientes/pacientes_visualizar.html
@@ -31,20 +31,21 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col s4 ">
-				<img class="imagens responsive-img left-align" src="../assets/paciente_feminina.png">
-			</div>
-			<div class="col s2 ">
-				<nav id="barrinha3" style="padding: 1.5% 4% 200% !important; border-radius:20px;"></nav>
-			</div>
-			<div class="col s6 ">
-				<h8 style="font-size: 44px;">Davila Fernandes</h8>
-				<h8 style="font-size: 44px;">22/06/1990</h8>
-			</div>
-		</div>
-	</div>
+	      <div class="col s4 ">
+			<img class="imagens responsive-img left-align" src="../assets/paciente_feminina.png">
+			      </div>
+	      <div class="col s4 ">
+	      	<nav id="barrinha">
+			</nav>
+	      </div>
+	      <div class="col s4 ">
+	      	<h7 style="font-size: 40px;">Dávila Fernandes</h7>
+	      	<h7 style="font-size: 36px;">22/06/1990</h7>
+	      </div>
+	  </div>
+	
 
-	<div class="row">
+	<div class="row" style="margin-top: 10%;">
 	  	<div class="col s12">
 	  		<div class="col s6 center-align">
 	  			<button id="meubotao3" class="button-verde">Dados</button>
@@ -55,24 +56,33 @@
 	  	</div>
 	 </div>
 
-	<div class="row">
+	<div class="row" style="margin-top: 10%;">
 		<div class="col s12 ">
-			<p><b>Paciente:</b></p>
-			<input type="text" value="Davila Fernandes" disabled>
+			<p style="font-size: 40px; font-family: 'Exo 2-Regular'; color: #323B43; margin-top: 5%;"><b style="font-size: 35px; color: #323B43; margin-bottom: 16px; font-style: bold;
+				font-family: 'Exo 2-Semi';
+				text-align: left;
+				padding: 24px 0;">Paciente:</b></p>
+			<input type="text" value="Davila Fernandes" style="font-size: 40px;" disabled>
 		</div>
 
 		<div class="col s6 ">
-			<p><b>Data de nascimento:</b></p>
-			<input type="text" value="22/06/1990" disabled>
+			<p style="font-size: 40px; font-family: 'Exo 2-Regular'; color: #323B43; margin-top: 5%;"><b style="font-size: 35px; color: #323B43; margin-bottom: 16px; font-style: bold;
+				font-family: 'Exo 2-Semi';
+				text-align: left;
+				padding: 24px 0;">Data de nascimento:</b></p>
+			<input type="text" value="22/06/1990"  style="font-size: 40px;" disabled>
 		</div>
 
 		<div class="col s12 ">
-			<p><b>Cidade:</b></p>
-			<input type="text" value="Fortaleza" disabled>
+			<p style="font-size: 40px; font-family: 'Exo 2-Regular'; color: #323B43; margin-top: 5%;"><b style="font-size: 35px; color: #323B43; margin-bottom: 16px; font-style: bold;
+				font-family: 'Exo 2-Semi';
+				text-align: left;
+				padding: 24px 0;">Cidade:</b></p>
+			<input type="text" value="Fortaleza"  style="font-size: 40px;" disabled>
 		</div>
 	</div>
 
-	<div class="col s12">
+	<div class="col s12" style="margin-top: 10%;">
 
 		<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger" href="#modal1" style="margin-top: 100px; display: inline-block;
 		margin-left: auto;
@@ -82,39 +92,45 @@
 		margin-right: auto;">Editar dados</button></a>
 
 	</div>
+</div>
 
 	<!--inicio modal de excluir formulário-->
-	<!-- Modal Structure -->
-	<div id="modal1" class="modal">
-		<div class="modal-content">
-			<h6>Deseja excluir os dados desse paciente?</h6>
-		</div>
-		<div class="modal-footer">
-			<button class=" modal-close avanar valign-text-middle exo2-bold-white-16px" href="#!" style="margin-top: 100px; display: inline-block;
-			margin-left: auto;
-			margin-right: auto;">Cancelar</button>
-
-			<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 100px; display: inline-block;
-			margin-left: auto;
-			margin-right: auto;">Excluir</button>
-		</div>
+		<!-- Modal Structure --> 
+		<div id="modal1" class="modal" style="background-color: #30566B;">
+			<div class="modal-content">
+				<h6 style="color: white;">Deseja excluir o paciente?</h6>
+			</div>
+				<div class="row" style="background-color: #30566B;">		
+					<div class="modal-footer" style="background-color: #30566B;">
+						<div class="col s5">
+				<button class=" modal-close avanar valign-text-middle exo2-bold-white-16px" href="#!" style="display: inline-block;
+				margin-left: auto;
+				margin-right: auto; width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: #5ABBE5;">Cancelar</button>
+</div>
+<div class="col s5">
+				<button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" href="#modal2" style="margin-top: 0px; display: inline-block;
+				margin-left: auto;
+				margin-right: auto; width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: white; text-align: right;">Excluir</button>
+</div>		</div>	
 	</div>
-	<!--fim modal de excluir formulario-->
+		</div>
+		<!--fim modal de excluir formulario-->
 
-	<!--inicio modal de confirmar exclusão-->
-	<!-- Modal Structure -->
-	<div id="modal2" class="modal">
-		<div class="modal-content" style="background-color: #30566B;">
-			<img src="../assets/icon_confirma.png">
-			<h6 style="color: white;">Os dados do paciente forma excluídos com sucesso</h6>
+		<!--inicio modal de confirmar exclusão-->
+		<!-- Modal Structure -->
+		<div id="modal2" class="modal">
+			<div class="modal-content" style="background-color: #30566B;">
+				<img src="../assets/icon_confirma.png">
+				<h6 style="color: white;">O paciente foi removido com sucesso.</h6>
+			</div>
+			<div class="modal-footer" style="background-color: #30566B;">
+				
+				<a href="pacientes.html"><button class=" avanar valign-text-middle exo2-bold-white-16px modal-trigger fechar-modal modal-close" style="margin-top: 0px; display: inline-block;
+					 width: auto; height: auto; border-style: double; border-color: #5ABBE5; color: white; text-align: center; margin-bottom: 0px;">Concluir</button></a>
+			
+			</div>
 		</div>
-		<div class="modal-footer">
-			<a href="pacientes.html"><button class=" avanar valign-text-middle exo2-bold-white-16px" style="margin-top: 100px; display: inline-block;
-			margin-left: auto;
-			margin-right: auto;">Concluir</button></a>
-		</div>
-	</div>
-	<!--fim modal de confirmar exclusão-->
+		<!--fim modal de confirmar exclusão-->
 </body>
 <!--inicio do menu inferior-->
 <div class="footer-fixed">
@@ -125,8 +141,8 @@
 					<li><a href="../index.html"><img src="../assets/icon-home.png" class="img-icon" ></a></li>
 					<li><a href="../formulario.html"><img src="../assets/icon_forms.png" class="img-icon"></a></li>
 					<li><a class="active" href="pacientes.html"><img src="../assets/icon_paciente.png" class="img-icon"></a></li>
-					<li><a href="#!"><img src="../assets/icon_ajuda.png" class="img-icon"></a></li>
-					<li><a href="#!"><img src="../assets/icon_sobre.png" class="img-icon"></a></li>
+					<li><a href="../ajuda.html"><img src="../assets/icon_ajuda.png" class="img-icon"></a></li>
+					<li><a href="../sobre.html"><img src="../assets/icon_sobre.png" class="img-icon"></a></li>
 				</ul>
 			</div>
 		</nav>
